nginx_ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: web.52.15.219.198.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-svc
          servicePort: http
---
